#17240 - correzione etichetta modale

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -542,7 +542,7 @@
 			    var prefix = [[@{/provider/}]];
 			    var url = prefix + providerId + "/evento/" + eventoId + "/marcaNoEcm";
 
-		    	$('#marcaNoEcmMsg').html("<h2>Si desidera marcare definitivamente come Evento svolto senza crediti ECM l'evento " + codiceIdentificativo + " (" + tipo + ")?</h2>");
+		    	$('#marcaNoEcmMsg').html("<h2>Si desidera marcare definitivamente come Evento svolto senza crediti ECM l'evento id:" + codiceIdentificativo + " (" + tipo + ")?</h2>");
 				$('#marcaNoEcmButton').html("<a class='btn btn-danger' href='" + url + "'>Marca</a>");
 			}
 
